--- a/src/sidebars.css
+++ b/src/sidebars.css
@@ -1,10 +1,10 @@
-.menu-header {
-  width: 280px;
-  background-color: rgb(56, 82, 155);
-  font-family: "calibri";
-  cursor: pointer;
-  margin: 2px;
-  border-radius: 5px;
+body {
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
 }
 
 main {
@@ -62,7 +62,6 @@ main {
   line-height: 0;
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
   transition: transform 0.35s ease;
-  transform: rotate(180deg) translateX(-2px);
   transform-origin: 0.5em 50%;
 }
 
