--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -6,8 +6,7 @@ body {
   font-family: "calibri";
   cursor: pointer;
   margin: 2px;
-  border-radius: 15px;
-  border: 5px solid #212529;
+  height: 50vh;
 }
 
 main {
