--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,8 +1,3 @@
-.navRow {
-  border-radius: 15px;
-  margin: 1px;
-}
-
 .nav {
   font-family: "calibri";
 }
@@ -10,6 +5,7 @@
 .nav-link {
   font-size: 20px;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #511d5f;
 }
 
 .dropdown-item {
@@ -18,11 +14,12 @@
 }
 
 .dropdown-item:hover {
-  background-color: #143f32;
+  background-color: #511d5f;
+  color: aliceblue;
 }
 
 .dropdown-menu {
-  border: 1px solid #4c5f59e5;
+  border: 1px solid #511d5f;
 }
 
 .avatar-img {
