--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -28,3 +28,8 @@ label {
 a {
   cursor: pointer;
 }
+
+.lang {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 12px;
+}
