--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,5 +1,5 @@
 .form-login {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   max-width: 350px;
   margin: 35%;
   margin-top: 10%;
