--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
 .Toastify__toast-container {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
+
+.tr {
+  cursor: pointer;
+}
