--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -18,3 +18,13 @@
 .selectedCol {
   background-color: rgb(165, 159, 212) !important;
 }
+
+input {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
